# Electsim

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  Dockerfile.railway  Dockerfile.worker  Makefile  README.md  alembic.ini  app.py  docker-compose.gh.yml  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.web.yml  docker-compose.yml  electsim  litellm_config.yaml  mkdocs.yml  package-lock.json  package.json  packages.txt  pages  politeia_spain_pipeline.py  pyproject.toml  railway.json  railway.toml  render.yaml  requirements-api-prod.txt  requirements-dashboard.txt  requirements-docker.txt  requirements-worker.txt  requirements.txt  setup_local.sh  setup_mac.sh  start-online.sh  start.sh  turbo.json
.claude/: launch.json
.streamlit/: secrets.toml.example
Diseño/: 0. Core y modulos.docx  0.0 Requisitos técnicos.docx  1. Briefings.docx  10. Centro de operaciones (workspace del analista).docx  2. Mapa de Actores con Ontología.docx  3. Termómetro de Riesgo Político.docx  4. Monitor Legislativo.docx  5. Gobierno & Coalición.docx  6. Alertas.docx  7. Medios & Narrativa.docx  8. Geopolítica & RRII.docx  9. Communication Intelligence.docx
agents/: __init__.py  ai_engine.py  backend_manager.py  evals.py  git_amigos_indexer.py  llm.py  local_intelligence.py  memory_log.py  ner_pipeline.py  pipeline_ai.py  prompts.py  rag_retriever.py  red_social.py  runner.py  scraper_ai.py  semantic_search.py  sentiment_pipeline.py  simulador_campana.py  simulador_cis.py  tool_authorizer.py  tools.py  tools_builtin.py
analytics/: big_data_engine.py  electoral_engine_v2.py  event_detector.py  geo_index.py  narrative_engine.py  sentiment_engine_v2.py  social_listening_engine.py  trend_detection.py
api/: auth.py  dependencies.py  main.py  market_dep.py  middleware.py  modules.py  observability.py  tenancy.py
assets/: coaliciones.json
backend/: Dockerfile  requirements.txt
communications/: __init__.py  approval_workflow.py  briefing_distribution.py  channel_registry.py  comms_guardrails.py  comms_monitor.py  comms_recommender.py  content_assets.py  content_calendar.py  message_studio.py  message_testing.py  newsletter_builder.py  performance_tracker.py  press_note_builder.py  publication_queue.py  repository.py  schemas.py  social_post_builder.py  strategy_engine.py  template_library.py
compute/: __init__.py  engines.py
config/: catalog_loader.py  catalog_models.py  market_loader.py  market_models.py  product_loader.py  product_models.py  settings.py
core/: __init__.py  evidence_policy.py  health.py  module_registry.py  service_result.py
crm/: __init__.py  consent.py  contacts.py  crm_exporter.py  crm_importer.py  crm_monitor.py  crm_recommender.py  crm_scoring.py  field_operations.py  interactions.py  mobilization.py  organizations.py  outreach.py  relationships.py  repository.py  schemas.py  segments.py  stakeholders.py  tasks.py
dashboard/: Home.py  __init__.py  adapters.py  app.py  app_state.py  components.py  config.py  data_source.py  db.py  db_impacto.py  election_math.py  entity_resolver.py  media_logic.py  shared.py  transfer_rules.py
data/: aliases.yaml
data_seeds/: __init__.py  economic_timeseries.py  key_events_calendar.py  legislative_archive.py  political_actors.py  political_narratives_archive.py  political_parties.py  social_indicators.py
db/: 03_usuarios.sql  __init__.py  connection.py  database.py  models.py  schema.sql  session.py
docs/: API_GUIDE.md  ARCHITECTURE.md  BLUEPRINT_SPLIT_MULTIREPO.md  ETL_PIPELINES.md  FICHAS_DINAMICAS_SETUP.md  FRONTEND_GUIDE.md  INGESTA_AUDIT.md  INGESTA_PROPUESTA.md  INGESTA_REPOS_AMIGOS.md  LLM_STACK.md  OBSERVABILITY.md  PILAR_5_PERFORMANCE.md  RAILWAY.md  ROADMAP_GITS_AMIGOS.md  SECTORIAL_INTEL.md  UI_MIGRATION.md  VISION_2027.md  WORKSPACES_MEJORAS.md  definition_of_done.md  geo_sources_y_viz_amigos_2026-05-26.md  git_amigos_integration.md  gits_amigos_adopcion.md  gits_amigos_inventory.json  gits_amigos_scan.md  ia_local.md  index.md  inventario_gits_amigos.md  microdatos.md  navigation_matrix.md  sprint-1-ia-local.md  sprint-2-fuentes-analysis.md  sprint-3-briefings.md  sprint-4-domain-tabs.md  sprint-5-complete-data.md  tab-electoral-coaliciones.md  tab-legislativo-regulatorio.md  tab-riesgo-crisis-intelligence.md
etl/: __init__.py  backfill_entity_ontology.py  base_extractor.py  config.py  electoral_math.py  factory.py  fetcher.py  ingest_microdatos.py  loader.py  logger.py  run_all_scrapers.py  run_perfiles.py  tasks.py
integrations/: __init__.py  economy_connectors.py  economy_env_delta.env.example  economy_registry_patch.py  github_connector.py  google_drive_connector.py  registry.py  slack_connector.py
media_intelligence/: __init__.py  acquisition.py  article_quality.py  article_ranker.py  editorial_selector.py  language_detection.py  narrative_pipeline.py  repository.py  rss_validator.py  schemas.py  source_health.py  translation_service.py
memory/: project_bloque12_ui.md  project_bloque13_security.md  project_bloque14_geopolitics.md  project_bloque15_crm.md  project_bloque16_comms.md  project_bloque_subsanacion3.md
memory_engine/: __init__.py  episodic_memory.py  knowledge_graph.py  memory_service.py  schemas.py  semantic_memory.py  snapshot_store.py
models/: Modelfile.politeia-brain  __init__.py  economic_vote.py
observability/: logging.py  metrics.py  otel.py
ontology/: __init__.py  actions.py  actor_graph.py  builtins.py  decision_log.py  metadata.py  objects.py
pipelines/: __init__.py  backfill_municipios_masivo.py  brain_core.py  brain_enrich_existing.py  comms_core.py  crm_core.py  data_ops_core.py  declaraciones_flow.py  document_core.py  economic_intelligence_pipeline.py  economy_core.py  electoral_core.py  electoral_dashboard_ingestion.py  fase2_modelos.py  fase3_agentes.py  fase5_validacion.py  geopolitics_core.py  ingest_aggregacion_maestra.py  ingest_all.py  ingest_economico.py  ingest_electoral.py  ingest_sectorial.py  ingest_social.py  ingesta_simple.py  legislative_core.py  media_core.py  media_monitoring_flow.py  (+6 more)
(+4387 files in other folders)
